# bike_rent_prediction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check_code_quality.yaml  requirements.txt
notebooks/: 0_EDA_notebook.ipynb
src/: ML_pipeline.py  data_load.py  data_preprocessing.py  env.py  evaluate.py  main.py  ml_pipeline.py  models.py  path.py  plots.py
streamlit/: EDA_app.py  main.py  plots.py
