[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Giulia Carra <giulia.carra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pathlib = "^1.0.1"
pylint = "^3.1.0"
isort = "^5.13.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

